hamburger only opens for mobile, fixed spacing/font-sizes, changed index.html so iphone does not zoom in on forms

--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
   height: 0;
 }
 
-.App button {
+.menu-button button {
   border: none;
   background: transparent;
 }
@@ -38,6 +38,19 @@
     right: 0;
     text-align: center;
     display: inline-block;
+  }
+  
+}
+
+@media (min-width: 550px) {
+  .menu-button button {
+    display: none;
+  }
+  .main-nav {
+    position: relative;
+    padding: .9%;
+    width: 100%;
+    height: 100%;
   }
 }
 
